src/App.css
* {
  background-color: #222222;

  font-family: "Poppins", sans-serif;
}

#bigIntro {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

#leftIntro {
  width: 50vw;
  height: 100vh;
  /* background-color: bisque; */
  display: flex;
  justify-content: center;
  align-items: center;
}

#rightIntro {
  width: 50vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  /* background-color: aliceblue; */
}

#rightIntro img {
  height: 50vh;
  width: 30vw;
  object-fit: cover;
}

#intro {
  margin: 0;
  color: white;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-direction: column;
  height: 50vh;
}

#intro h1 {
  font-size: 3.4vw;
  font-weight: 900;
}

#intro h5 {
  width: 20vw;
  /* display: flex;
  justify-content: center;
  align-items: center; */
  word-break: normal;
}

#prof {
  display: flex;
  justify-content: flex-end;
  margin-right: 15%;
}

#nav {
  display: flex;
  flex-direction: row;
  position: fixed;
  color: white;
  justify-content: flex-start;
  align-items: center;
  z-index: 1;
  margin: 1vh;
  width: 100vw;
}

ul {
  cursor: pointer;
  list-style: none;
}

.navItem {
  transition: 0.3s ease;
  color: rgb(255, 255, 255);
  font-size: 2vh;
  text-decoration: none;
  border-top: 4px solid #222222;
  border-bottom: 4px solid #222222;
  margin: 0 2vh;
}

.navItem:hover {
  border-top: 4px solid rgb(0, 236, 59);
  border-bottom: 4px solid rgb(0, 236, 59);
  padding: 6px 0;
  color: rgb(0, 236, 59);
}

#begin {
  display: flex;
  align-items: center;
  font-size: 1.4vw;
  font-weight: 100;
  transition: padding-left 0.2s, color 0.2s;
  -webkit-transition-timing-function: linear;
  width: 30vw;
  /* background-color: antiquewhite; */
}

#arrowRight {
  color: rgb(0, 236, 59);
  font-size: 2.5vh;
  transition: padding-left 0.2s;
  position: static;
}

#begin a {
  transition: padding-left 0.2s, color 0.2s;
  color: white;
  text-decoration: none;
}

#begin:hover a {
  padding-left: 2.5vh;
  color: rgb(0, 236, 59);
}

#begin:hover #arrowRight {
  padding-left: 2vh;
}
#aboutOuter {
  height: 100vh;
  width: 100vw;
  display: flex;
  align-items: center;
  justify-content: center;
}

#about {
  color: white;
  display: flex;
  flex-direction: row;
  /* text-align: center; */
}

#aboutFirst {
  color: rgb(255, 255, 255);
  height: 80vh;
  width: 40vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 40px;
}

#backArrow {
  font-size: 40px;
  color: rgb(0, 236, 59);
}
.aboutSecond {
  color: rgb(255, 255, 255);
  height: 80vh;
  width: 40vw;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.aboutSecond div {
  background-color: antiquewhite;
  word-wrap: normal;
  -ms-word-wrap: normal;
}

#projects {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

#indProj {
  height: 100vh;
  width: 100vw;
}

#projTitle {
  color: white;
  font-size: 40px;
  display: flex;
  justify-content: center;
}
#indRectangle {
  display: flex;
  justify-content: center;
  flex-direction: row;
  align-items: center;
}

#indProjUnderlying {
  width: 30vh;
  height: 70vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  background-color: white;
}

#aProj {
  background-color: white;
  text-decoration: none;
  color: rgb(0, 236, 59);
  text-align: center;
}

#projBio {
  background-color: white;
  text-align: center;
}

#indProjImages {
  margin: 10px;
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

#image1 {
  height: 70vh;
  width: 80vh;
  object-fit: cover;
  margin: 5px;
}
#image2 {
  height: 70vh;
  width: 30vh;
  object-fit: cover;
}

#projectsTitle {
  color: white;
  display: flex;
  align-items: center;
  padding-top: 60px;
  padding-left: 60px;
  font-size: 24px;
  text-decoration: none;
  transition: 0.4s ease;
}

#projectsH1 {
  padding-left: 20px;
}

#projectsTitle:hover {
  padding-left: 50px;
  color: rgb(0, 236, 59);
}

#contactPics {
  display: flex;
  justify-content: center;
  flex-direction: row;
}

.contactPic {
  margin: 10px;
}

.contactPicImage {
  height: 100px;
  width: 100px;
}

#contactsBottomPage {
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
}

#emailBlock {
  font-size: 30px;
}

#technologies {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  width: 80vw;
  flex-wrap: wrap;
}
#indTech {
  text-align: center;
  color: white;
  margin: 10px;
}

#techLogo {
  height: 150px;
  width: 150px;
  transition: 0.4s ease;
  z-index: 10;
}
#techLogo:hover {
  height: 200px;
  width: 200px;
}

#IndT {
  display: flex;
  justify-content: center;
  align-items: center;
}

#aWeb {
  background-color: white;
  text-decoration: none;
  color: black;
  font-size: 1.2vw;
  margin-bottom: 3vw;
  border-bottom: solid;
  border-width: 1px;
  /* transition: all 0.1s; */
}

#aWeb:hover {
  border-width: 2px;
}

@media only screen and (max-width: 600px) {
  #about {
    flex-direction: column;
  }

  #aboutFirst {
    width: 100vw;
    height: 10vh;
    padding-top: 200px;
  }

  #aboutSecond {
    width: 100vw;
    height: 90vh;
    font: 20px;
  }

  #bigIntro {
    /* flex-direction: column; */
  }

  #leftIntro {
    height: 50vh;
    width: 100vw;
    /* background-color: red; */
  }

  #intro {
    /* background-color: yellow; */
  }

  #intro h1 {
    font-size: 4vw;
    padding: 0;
    margin: 0;
  }

  #intro h3 {
    text-align: center;
  }

  #rightIntro {
    height: 50vh;
    width: 100vw;
  }

  .arrows {
    width: 50vw;
  }

  #nav {
  }

  .navItem {
    width: 15vw;
    height: 4vh;
    font-size: 2.3vw;
    text-align: center;
    margin: 1vw;
    display: flex;
    justify-content: center;
    align-items: center;
  }
}

